[package]
name = "aiss"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel code generation units to increase optimization
panic = 'abort'     # Remove panic unwinding to reduce binary size
strip = true        # Strip symbols from binary

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
tokio-rustls = "0.24"
rustls = "0.21"
rustls-pemfile = "1.0"
